--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "require": {
-        "components/jquery": "3.4.1"
+        "mervick/material-design-icons": "2.2.0",
+        "components/jquery": "^3.4",
+        "fortawesome/font-awesome": "^5.11",
+        "components/jquery-cookie": "1.4.1.2",
+        "phpmailer/phpmailer": "6.1",
+        "catfan/medoo": "^1.7"
     },
 
     "config": {
